--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hmcts/rpx-xui-node-lib",
-  "version": "2.28.0",
+  "version": "2.29.0",
   "description": "Common Nodejs library components for XUI",
   "main": "dist/index",
   "types": "dist/index.d.ts",
@@ -40,11 +40,11 @@
     "dist/**/*"
   ],
   "devDependencies": {
-    "@commitlint/cli": "^8.2.0",
+    "@commitlint/cli": "^17.8.1",
     "@commitlint/config-conventional": "^8.2.0",
-    "@semantic-release/changelog": "^5.0.1",
-    "@semantic-release/git": "^9.0.0",
-    "@semantic-release/github": "^7.0.7",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^8.1.0",
     "@types/connect-redis": "^0.0.14",
     "@types/csurf": "^1.9.36",
     "@types/debug": "^4.1.5",
@@ -61,19 +61,19 @@
     "@typescript-eslint/parser": "^3.10.1",
     "commitizen": "^4.0.3",
     "commitlint-config-cz": "^0.13.1",
-    "cz-conventional-changelog": "^3.0.2",
-    "eslint": "^6.8.0",
+    "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.3.1",
     "husky": ">=4",
-    "jest": "^27.5.1",
+    "jest": "^29.7.0",
     "jest-environment-jsdom": "^27.5.1",
     "lint-staged": "^10.2.2",
     "prettier": "^2.0.5",
-    "semantic-release": "^17.0.8",
-    "standard-version": "^7.0.1",
+    "semantic-release": "^19.0.2",
+    "standard-version": "^9.5.0",
     "supports-color": "^7.1.0",
-    "ts-jest": "^27.1.5",
+    "ts-jest": "^29.1.4",
     "ts-node": "^10.8.1",
     "tslint": "^6.1.0",
     "tslint-config-prettier": "^1.18.0",
@@ -94,8 +94,8 @@
     "deepmerge": "^4.2.2",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
-    "jest-mock-axios": "^4.6.2",
-    "jest-ts-auto-mock": "^2.0.0",
+    "jest-mock-axios": "^4.7.3",
+    "jest-ts-auto-mock": "^2.1.0",
     "jwt-decode": "^2.2.0",
     "openid-client": "^3.10.0",
     "otplib": "^12.0.1",
@@ -105,5 +105,11 @@
     "session-file-store": "^1.3.1",
     "ts-auto-mock": "^3.5.0",
     "ttypescript": "^1.5.13"
+  },
+  "resolutions": {
+    "@babel/traverse": "7.23.2",
+    "minimatch": "3.0.5",
+    "minimist": "1.2.6"
   }
 }
+
