chore: update vulnerable dependencies (#247)
* chore: update vulnerable dependencies

* chore: upgrade github action upload download

* chore: increment version number

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hmcts/rpx-xui-node-lib",
-  "version": "2.29.2-output-stdout",
+  "version": "2.29.3",
   "description": "Common nodejs library components for XUI",
   "main": "dist/index",
   "types": "dist/index.d.ts",
@@ -87,20 +87,20 @@
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
-    "axios": "^0.21.1",
+    "axios": "^1.7.7",
     "caller-path": "^3.0.0",
     "connect-redis": "^4.0.4",
     "csurf": "^1.11.0",
-    "debug": "^4.1.1",
+    "debug": "^4.3.7",
     "deepmerge": "^4.2.2",
-    "express": "^4.17.1",
+    "express": "^4.20.0",
     "express-session": "^1.17.0",
     "jest-mock-axios": "^4.7.3",
     "jest-ts-auto-mock": "^2.1.0",
     "jwt-decode": "^2.2.0",
     "openid-client": "^3.10.0",
     "otplib": "^12.0.1",
-    "passport": "^0.4.1",
+    "passport": "^0.7.0",
     "passport-oauth2": "^1.5.0",
     "redis": "^3.0.2",
     "session-file-store": "^1.5.0",
