--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hmcts/rpx-xui-node-lib",
-  "version": "2.29.4-exui-2531-rc-6",
+  "version": "2.29.4-exui-2079-rc3",
   "description": "Common nodejs library components for XUI",
   "main": "dist/index",
   "types": "dist/index.d.ts",
@@ -47,7 +47,7 @@
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^8.1.0",
     "@types/connect-redis": "^0.0.23",
-    "@types/csurf": "^1.9.36",
+    "@types/csurf": "^1.11.0",
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.2",
     "@types/express-session": "1.17.10",
@@ -86,21 +86,21 @@
     }
   },
   "dependencies": {
-    "@hapi/joi": "^17.1.1",
+    "@dr.pogodin/csurf": "^1.14.0",
     "axios": "^1.7.7",
     "caller-path": "^3.0.0",
     "connect-redis": "^4.0.4",
-    "csurf": "^1.11.0",
     "debug": "^4.3.7",
     "deepmerge": "^4.2.2",
     "express": "^4.20.0",
     "express-session": "^1.17.0",
     "jest-mock-axios": "^4.7.3",
     "jest-ts-auto-mock": "^2.1.0",
+    "joi": "^17.13.3 ",
     "jwt-decode": "^2.2.0",
-    "openid-client": "^3.10.0",
+    "openid-client": "^5.7.0",
     "otplib": "^12.0.1",
-    "passport": "^0.5.3",
+    "passport": "^0.6.0",
     "passport-oauth2": "^1.5.0",
     "redis": "^3.0.2",
     "session-file-store": "^1.5.0",
